statefulSet pods individual configs/05-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "system-ingress"
    certmanager.k8s.io/cluster-issuer: monitoring-issuer
spec:
  tls:
    - hosts:
        - mon.k.erusnikov.ru
      secretName: mon-tls
  rules:
    - host: "mon.k.erusnikov.ru"
      http:
        paths:
          - pathType: Prefix
            path: /grafana
            backend:
              service:
                name: grafana-sys-connect
                port:
                  number: 3000
          - pathType: Prefix
            path: /vmagent-0
            backend:
              service:
                name: vmagent-sys-0
                port:
                  number: 8429
          - pathType: Prefix
            path: /vmagent-1
            backend:
              service:
                name: vmagent-sys-1
                port:
                  number: 8429
